# boxmart

backend/: .gitignore  Cargo.toml
backend/migrations/: 20250924061202_create_initial_tables.sql
backend/src/: main.rs
backend/src/api/: box_type.rs  create_jwt.rs  hello.rs  login.rs  mod.rs  product_details.rs  products.rs  signup.rs  users.rs
backend/src/models/: box_type.rs  jwt_claims.rs  mod.rs  paper_type.rs  product_cost_estimation.rs  products.rs  roll_type.rs  user_types.rs
frontend/: .gitignore  Cargo.toml  index.html  trunk.toml
frontend/src/: app.rs  main.rs
frontend/src/components/: cost_estimator.rs  login.rs  mod.rs  navbar.rs  product_card.rs  signup.rs
frontend/src/helper_functions/: form_checker.rs  login_form_checker.rs  mod.rs
frontend/src/pages/: auth.rs  contactpage.rs  homepage.rs  mod.rs  products.rs
frontend/src/src/: lib.rs
frontend/src/src/components/: dropdown.rs  signup.rs
frontend/src/src/pages/: auth.rs  contactpage.rs  homepage.rs  mod.rs
frontend/src/src/utils/: user_types.rs
frontend/src/utils/: mod.rs  paper_types.rs  user_types.rs
