[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
json-web-token = "0.2.0"
jsonwebtoken = "9.3.1"
# sqlx ke liye postgres + chrono enable karna zaroori hai
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5.2"
anyhow = "1.0.98"