[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
json-web-token = "0.2.0"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5.2"
once_cell = "1.19"
anyhow = "1.0.98"
argon2 = "0.5"
rand_core = "0.6"     # salt ke liye