[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.9", features = ["csr"] }
leptos_router = "0.8.6"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde="1"
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"
[dependencies.web-sys]
version = "0.3"
features = [
  'console',
]
